# yzLibrary

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  doc_entry.html  yzLib_Doxy  yzLib_Doxy.in
examples/: batch_CMakeLists.txt  data_path.h.in  recursive_replace_CMakeLists.bat  recursive_replace_CMakeLists.sh  vs_tmp.vcxproj.user.in
examples/animation/character_animation/: character_animation.cpp  config.txt
examples/geometry/aabb_tree_2d/: aabb_tree_2d.cpp
examples/geometry/bezier_triangle/: bezier_triangle.cpp
examples/geometry/icp_eigen/: config.txt  icp_eigen.cpp
examples/geometry/knn/: knn.cpp
examples/geometry/knn_2d/: knn_2d.cpp
examples/geometry/remeshing/: remeshing.cpp
examples/geometry/uv_unwrap/: config.txt  uv_unwrap.cpp
examples/math/matrix/: CMakeLists.txt  matrix.cpp
examples/math/quaternion/: CMakeLists.txt  quaternion.cpp
examples/opengl/ascii_displayer/: ascii_displayer.cpp  config.txt
examples/opengl/cuda_glut_window/: config.txt  cuda_glut_window.cpp
examples/opengl/glut_window/: config.txt  glut_window.cpp
examples/opengl/picking/: picking.cpp
examples/opengl/shader/: CMakeLists.txt  config.txt  shader.cpp
examples/opengl/texture_mesh/: config.txt  texture_mesh.cpp
examples/physics/FEM/: FEM.cpp
examples/physics/FEM2D/: FEM2D.cpp
examples/physics/mass_spring/: mass_spring.cpp
examples/physics/position_based_dynamics/: CMakeLists.txt  position_based_dynamics.cpp
examples/tmp/: M3C.cpp  SerialPort.cpp  debug_point_in_mesh.cpp  laplacian.cpp  mesh_deformation.cpp  point_plane_icp.cpp  sampling_2d.cpp  sdf.cpp  sparse_using_eigen.cpp
yzLib/: doxygen_include_hack.h  yzLib.cmake  yzLib_config.h.in  yz_3rd_header_macro.h  yz_animation.h  yz_cuda.h  yz_geometry.h  yz_geometry_algorithm.h  yz_geometry_mesh.h  yz_geometry_polygon.h  yz_geometry_topology.h  yz_image.h  yz_kinect.h  yz_lib.h  yz_math.h  yz_math_algorithm.h  yz_math_type.h  yz_math_utils.h  yz_opengl.h  yz_physics.h  yz_setting.h  yz_system.h  yz_utils.h  yz_windows.h
yzLib/yz_animation/: yz_lbs_rigging.h  yz_mocap_rw.h  yz_rigging_to_mesh.h  yz_skeleton.h  yz_skeleton_animation.h  yz_skeleton_utils.h  yz_skin.h
yzLib/yz_cuda/: yz_cuda_basic.h  yz_cuda_debug.h  yz_cuda_fbo.h  yz_cuda_opengl.h
yzLib/yz_geometry/: yz_aabb_tree.h  yz_bonding_box.h  yz_clipping.h  yz_create_topology.h  yz_field.h  yz_fitting.h  yz_icp.h  yz_intersection_test.h  yz_mesh_area.h  yz_mesh_curvature.h  yz_mesh_deform.h  yz_mesh_floodfill.h  yz_mesh_generation.h  yz_mesh_intersection_test.h  yz_mesh_matching.h  yz_mesh_matrix.h  yz_mesh_nn.h  yz_mesh_normal.h  yz_mesh_repair.h  yz_mesh_rw.h  yz_mesh_seperate.h  yz_mesh_smoothing.h  yz_mesh_subd.h  yz_mesh_texture.h  yz_mesh_topology.h  yz_mesh_transform.h  yz_mesh_utils.h  yz_mesh_uv.h  yz_offset_tri_mesh.h  yz_polygon.h  yz_quad_mesh.h  yz_remeshing.h  yz_sphere.h  yz_sphere_tree.h  yz_tetrahedron.h  yz_texture_tri_mesh.h  yz_tri_mesh.h  yz_tri_mesh_2d.h
yzLib/yz_geometry/yz_field/: yz_field_base.h  yz_label_field.h  yz_marching_cube.h  yz_sdf.h
yzLib/yz_geometry/yz_icp/: yz_point_point.h
yzLib/yz_geometry/yz_polygon/: yz_create_polygon.h  yz_polygon_def.h  yz_polygon_deform.h  yz_polygon_distance_field.h  yz_polygon_intersection_test.h  yz_polygon_utils.h
yzLib/yz_geometry/yz_remeshing/: yz_mesh_interpolation.h  yz_mesh_optimization.h  yz_sampling_2d.h
yzLib/yz_geometry/yz_tetrahedron/: yz_tet_mesh.h  yz_tet_mesh_matrix.h  yz_tet_mesh_topology.h
yzLib/yz_image/: yz_image_raster.h  yz_image_rw.h  yz_image_rw_bmp.h  yz_image_rw_freeimage.h  yz_image_rw_pfm.h
yzLib/yz_kinect/: yz_kinect_base.h  yz_microsoft_kinect.h
yzLib/yz_math/: yz_blas_sparse_operators.h  yz_curve.h  yz_dense_vector.h  yz_eigen_direct_solver.h  yz_filter.h  yz_graph_algorithm.h  yz_interpolation.h  yz_lookup_table.h  yz_math_io.h  yz_math_setting.h  yz_matrix.h  yz_matrix_utils.h  yz_mkl_direct_solver.h  yz_mkl_iter_solver.h  yz_mkl_spblas_c.h  yz_numerical_utils.h  yz_pca.h  yz_quaternion.h  yz_resampling.h  yz_solver.h  yz_sparse_convert.h  yz_sparse_matrix.h  yz_sparse_vector.h  yz_type_promote.h  yz_vector.h  yz_vector_utils.h
yzLib/yz_math/yz_statistics/: yz_kernel_functions.h  yz_regression_2d.h  yz_regression_3d.h  yz_statistics_basic.h
yzLib/yz_opengl/: yz_animation_opengl_utils.h  yz_ascii_displayer.h  yz_fbo.h  yz_glut_window.h  yz_opengl_utils.h  yz_shader.h  yz_texture.h  yz_vbo.h  yz_vector_opengl_utils.h
yzLib/yz_physics/: yz_bending_force.h  yz_mass_spring.h  yz_physics_base.h  yz_position_based_dynamics.h  yz_wrinkle_mesh.h
yzLib/yz_physics/yz_fem/: yz_fem_tri_mesh.h
yzLib/yz_system/: yz_thread.h
yzLib/yz_utils/: yz_args.h  yz_array_check.h  yz_ascii_table.h  yz_color_bar.h  yz_file.h  yz_hash.h  yz_image_rw_utils.h  yz_mem_pattern.h  yz_reorder.h  yz_sparse_visualize.h  yz_string_utils.h  yz_timer.h
yzLib/yz_windows/: yz_win_process.h  yz_win_utils.h
yzLibPy/: yz_glut_windows.py
